--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ input.search{
     border-radius: 15px;
     border: 1px solid #fff;
     color:#fff;
+    cursor: pointer;
 }
 .btn-list{
     margin-left: 8px;   
@@ -115,10 +116,129 @@ input.search{
     font-size: 1.5em;
     color:#fff;
 }
+/*********** gnb full nav*************/
+#gnb{
+    position:fixed;
+    left:0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    overflow-y: scroll;
+    background-color: #153988;
+    z-index: 999;
+}
+#gnb>ul{
+    width: 100%;
+    height: auto;
+    display: flex;
+    padding:0 5.5rem;
+    list-style: none;
+    margin:0;
+    margin-top: 2rem;
+    color:#fff
+}
 
+#gnb>ul>li{
+    flex:1;
+    padding: 4rem 2rem 4rem 1.5rem;
+    border-right: 1px solid rgba(255,255,255,.2);
+}
+#gnb>ul>li:first-child{
+    border-left:1px solid rgba(255,255,255,.2);
+}
 
+#gnb>ul>li>a{
+    color: #fff;
+    font-size:1.8em;
+    font-weight:600;
+    transition: all 0.6s;
+}
+#gnb>ul>li>a:hover,
+.submenu>ul>li>a:hover{
+    color: #ffce00;
+}
+.submenu{
+  margin-top:2rem;
+} 
+.submenu ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.submenu>ul>li{
+    overflow: hidden;
+}
+.submenu>ul>li>a{
+    display:block;
+    font-size:1.3rem;
+    font-weight: 500;
+    line-height: 3;
+    color:#fff;
+    letter-spacing: -2px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    transition: all 1s;
+    white-space: nowrap;
+}
+.lnb-detail a::before{
+    content: "- ";
+}
+.lnb-detail a{
+    color:#91ace6;
+    font-weight: 500;
+    display: block;
+    transition: all 0.6;
+    line-height: 1.8;
+    letter-spacing: -1px;
+    white-space: nowrap;
+}
+
+.lnb-detail a:hover{
+    color: #ffce00;
+    text-decoration: underline;
+}
+
+.closebox{
+    position: absolute;
+    top:50px;
+    right:45px;
+    width: 30px;
+    height: 30px;
+    overflow: hidden;
+    z-index:1000;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+.closebox:hover{
+    transform: rotateZ(180deg);
+}
+.closebox>div:first-child{
+    position: absolute;
+    width:100px;
+    height: 2px;
+    background-color: #fff;
+    transform: rotateZ(45deg);
+    top:28px;
+    left:-20px;
+    
+}
+.closebox>div:last-child{
+    position:absolute;
+    width:100px;
+    height: 2px;
+    background-color: #fff;
+    transform: rotateZ(-45deg);
+    top:-3px;
+    left:-20px;
+    
+}
 /******** HERO **********************/
 
+.vcontainer{
+    width: 100%;
+    height: 100%;
+}
 .vdobox{
     width: 100%;
     height: 100%;
@@ -130,6 +250,9 @@ input.search{
 
 video.vdo{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center top;
 }
 
 
@@ -145,10 +268,13 @@ video.vdo{
     transform: translateX(-50%);
     z-index: 10;
     text-shadow: 2px 2px 2px rgba(0,0,0,1);
+    letter-spacing: 5px;
+    width: 100%;
 
 }
 
 .vdobox p{
+    width: 100%;
     position:absolute;
     color:#333;
     font-size: 1.5em;
@@ -159,4 +285,135 @@ video.vdo{
     transform: translateX(-50%);
     z-index: 10;
 }
+
+.circle-box{
+    width: 220px;
+    height: 220px;
+    border-radius: 50%;
+    bottom:-110px;
+    left: calc(50% - 110px);
+    background-color: rgba(0,0,0,0.7);
+    position:absolute;
+    z-index: 11;
+}
+
+.btnbox{
+    width: 15px;
+    height:20px;
+    border: 2px solid #fff;
+    position: absolute;
+    top:30px;
+    left:calc(50% - 7.5px);
+    z-index: 11;
+    border-radius: 5px;
+}
+.circle-box p{
+    position:absolute;
+    top: 15px;
+    color:#fff;
+    z-index: 22;
+    font-size: 1em;
+    width: 220px;
+    font-weight:500;
+}
+.line{
+     position:absolute;
+     top:2px;
+     left: 50%;
+     width: 2px;
+     height: 5px;
+     background: #fff;
+     animation-name : line-action;
+     animation-duration: 1s;
+     animation-iteration-count: infinite;
+}
+@keyframes line-action {
+    from { 
+        top:0;
+    }
+    to{   
+        top: 8px;
+    }
+}
+
+@media screen and (max-width:1600px){
+
+    .vdobox{
+       height: auto;
+    }
+
+    .vdobox h1{
+        
+        font-size:3em;
+    }
+
+    .vdobox p{
+         font-size: 1em;
+    }
+    
+    
+}
+
+@media screen and (max-width:768px){
+    header{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    header .logo{
+        font-size:1.3em;
+        font-weight: 500;
+    }
+    .vcontainer{
+        position: relative;
+    }
+    .vcontainer::after{
+        display: block;
+        content: "";
+        padding-bottom: 45%;
+    }
+
+    .vdobox{
+        width: 100%;
+        height: 50%;
+        position:absolute;
+        top: 0;
+        left: 0;
+    }
+    .vdobox h1{
+        top:100px;
+        font-size:2em;
+        font-weight: 500;
+        letter-spacing: -2px;
+    }
+
+    .vdobox p{
+         top: 200px;
+         width: 80%;
+         font-size: 1em;
+         color:#333;
+    }
+    .vdo{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    nav, .searchform {
+         display: none;
+    }
+
+    .right{
+        width: 15%;
+    }
+    .btnbox p{
+        width: 150px;
+        top:15px;
+    }
+    .btn-h-line span{
+           font-size:0.6em;
+           padding-left: 8px;
+           padding-right: 8px;
+    }
+}
+
 
