--- a/css/style.css
+++ b/css/style.css
@@ -1,419 +1,407 @@
-@import url(https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.min.css);
+@import url('https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.1.0/remixicon.min.css');
 @import url('fonts.css');
-@import url(animate.min.css);
-@import url(grid.css);
-
+@import url('animate.min.css');
+@import url('grid.css');
 html,body{
-    height: 100%;
+    height:100%;
 }
 body{
-    margin: 0;
-    font-family: 'IBM', sans-serif;
-    font-size:1rem;
-    color: #454545;
-    
-}
-
-a, a:link{
+    font-family:'IBM', sans-serif;
+    font-size:16px;
     color:#454545;
-    text-decoration: none;
+    margin:0;
 }
-
-a, a:hover{
+a,a:link{
+    color:#454545;
+    text-decoration:none;
+}
+a:hover{
     color:#000;
 }
-
 .container{
-    width: 1400px;
-    margin-left: auto;
-    margin-right: auto;
+    width:1400px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
-/****************  HEADER   **********************************/
-
+/************** HEADER ***************/
 header{
-    width: 100%;
-    display: flex;
+    width:100%;
+    display:flex;
     justify-content: space-between;
-    align-items: center ;
+    align-items: center;
     padding: 30px 50px;
-    position:fixed; /* 상단고정 */
-    z-index: 999;
+    position:fixed;
+    z-index:100;
     color:#fff;
 }
-
-nav{
-    width: 53%;
+.header-background{
+    width:100%;
+    height:100px;
+    background:#fff;
+    position:fixed;
+    z-index:1;
+    border-bottom:1px solid #ccc;
+    display:none;
+}
+.black-font{
+    color:#333 !important;
+}
+.black-border{
+    border:1px solid #333 !important;
 }
 ul.main-nav{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    list-style-type:none;
+    margin:0;
+    padding:0;
     display:flex;
     justify-content: space-between;
 }
-
 a.logo{
-    font-size: 1.8em;
-    font-weight: 800;
-    color:#fff;
+   font-size: 1.8em;
+   font-weight:800;
+   color:#fff;
 }
-
+nav{
+    width:53%;
+}
 .main-nav>li>a{
     font-size: 1.4em;
-    font-weight: 500;
+    font-weight:500;
     color:#fff;
+    position:relative;
 }
-
+.main-nav>li>a::after{
+    content:"";
+    position:absolute;
+    height:4px;
+    background:#16398B;
+    left:0;
+    right:0;
+    bottom:-33px;
+    transform: scaleX(0);
+    transition: all 0.3s;
+}
+.main-nav>li>a:hover::after{
+    transform: scaleX(1);
+}   
 .right{
-    display: flex;
+    display:flex;
     justify-content: space-between;
-    align-items: center ;
-    width: 300px;
+    align-items: center;
+    width:300px;
 }
 .searchform{
-    border:1px solid #fff;
-    margin-right: 8px;
-    padding-top:5px;
-    padding-bottom: 5px;
-    border-radius: 30px;
-    overflow: hidden;
-    position: relative;
-    color:#fff;
+   border:1px solid #fff;
+   margin-right:8px;
+   padding-top:5px;
+   padding-bottom:5px;
+   border-radius:30px;
+   overflow:hidden;
+   position:relative;
 }
 input.search{
-    border: none;
+    border:none;
     outline: none;
     padding:5px 10px 5px 35px;
-    font-size: 1.2em;
-    background-color: transparent;
+    font-size:1.2em;
+    background-color:transparent;
     color:#fff;
 }
-
 .search-icon{
-    position: absolute;
-    z-index: 100;
+    position:absolute;
+    z-index:100;
     top:13px;
-    left: 15px;
-    color:#fff;
+    left:12px;
 }
-
 .btn-h-line{
-    background: transparent;
+    background:transparent;
     outline: none;
-    border: none;
-    padding: 5px;
-    border-radius: 15px;
-    border: 1px solid #fff;
+    border:none;
+    padding:5px;
+    border-radius:15px;
+    border:1px solid #fff;
     color:#fff;
-    cursor: pointer;
+    cursor:pointer;
 }
 .btn-list{
-    margin-left: 8px;   
-    padding: 9px 10px;
+    margin-left:8px;
+    padding:9px 10px;
 }
 .btn-list>i{
-    font-size: 1.5em;
-    color:#fff;
+    font-size:1.5em;
 }
-/*********** gnb full nav*************/
+/****** GNB FULL NAV *******/
 #gnb{
-    position:fixed;
-    left:0;
-    top:0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    overflow-y: scroll;
-    background-color: #153988;
-    z-index: 999;
+   position:fixed;
+   left:0;
+   top:0;
+   width:100%;
+   height:100%;
+   overflow:hidden;
+   overflow-y: auto;
+   background-color:#16398B;
+   z-index:999;
+   display:none;
 }
 #gnb>ul{
-    width: 100%;
-    height: auto;
-    display: flex;
+    width:100%;
+    height:auto;
+    display:flex;
     padding:0 5.5rem;
-    list-style: none;
+    list-style:none;
     margin:0;
-    margin-top: 2rem;
-    color:#fff
+    color:#fff;
 }
-
 #gnb>ul>li{
     flex:1;
     padding: 4rem 2rem 4rem 1.5rem;
-    border-right: 1px solid rgba(255,255,255,.2);
+    border-right:1px solid rgba(255,255,255,.2);
 }
 #gnb>ul>li:first-child{
     border-left:1px solid rgba(255,255,255,.2);
 }
-
 #gnb>ul>li>a{
-    color: #fff;
+    color:#fff;
     font-size:1.8em;
     font-weight:600;
     transition: all 0.6s;
 }
-#gnb>ul>li>a:hover,
+#gnb>ul>li>a:hover, 
 .submenu>ul>li>a:hover{
-    color: #ffce00;
+    color:#ffce00;
 }
 .submenu{
-  margin-top:2rem;
-} 
+    margin-top:2rem;
+}
 .submenu ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    list-style-type:none;
+    margin:0;
+    padding:0;
 }
 .submenu>ul>li{
-    overflow: hidden;
+    overflow:hidden;
 }
 .submenu>ul>li>a{
-    display:block;
-    font-size:1.3rem;
-    font-weight: 500;
-    line-height: 3;
-    color:#fff;
-    letter-spacing: -2px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    transition: all 1s;
-    white-space: nowrap;
-}
-.lnb-detail a::before{
-    content: "- ";
+   display:block;
+   font-size:1.3rem;
+   font-weight:500;
+   line-height:3;
+   color:#fff; 
+   letter-spacing:-2px;
+   white-space:nowrap;
+   text-overflow:ellipsis;
+   transition: all 0.6s;
+   white-space: nowrap;
 }
 .lnb-detail a{
     color:#91ace6;
-    font-weight: 500;
-    display: block;
-    transition: all 0.6;
-    line-height: 1.8;
-    letter-spacing: -1px;
+    font-weight:500;
+    display:block;
+    transition: all 0.6s;
+    line-height:1.8;
+    letter-spacing:-1px;
     white-space: nowrap;
 }
-
+.lnb-detail a::before{
+    content:"- ";
+}
 .lnb-detail a:hover{
-    color: #ffce00;
+    color:#ffce00;
     text-decoration: underline;
 }
 
 .closebox{
-    position: absolute;
+    position:absolute;
     top:50px;
-    right:45px;
-    width: 30px;
-    height: 30px;
-    overflow: hidden;
-    z-index:1000;
-    cursor: pointer;
-    transition: all 0.3s;
+    right:30px;
+    width:30px;
+    height:30px;
+    overflow:hidden;
+    z-index:999;
+    cursor:pointer;
+    transition: all 0.5s;
 }
 .closebox:hover{
     transform: rotateZ(180deg);
 }
 .closebox>div:first-child{
-    position: absolute;
+    position:absolute;
     width:100px;
-    height: 2px;
-    background-color: #fff;
+    height:2px;
+    background:#fff;
     transform: rotateZ(45deg);
     top:28px;
     left:-20px;
-    
 }
 .closebox>div:last-child{
     position:absolute;
     width:100px;
-    height: 2px;
-    background-color: #fff;
+    height:2px;
+    background:#fff;
     transform: rotateZ(-45deg);
     top:-3px;
     left:-20px;
-    
 }
-/******** HERO **********************/
-
+/************** HERO *****************/
 .vcontainer{
-    width: 100%;
-    height: 100%;
+   width:100%;
+   height:100%;   
 }
 .vdobox{
-    width: 100%;
-    height: 100%;
-    position: relative;
+    width:100%;
+    height:100%;
+    position:relative;
     padding:0;
-    margin: 0;
-    overflow: hidden;
+    margin:0;
+    overflow:hidden;
 }
-
 video.vdo{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center top;
+   width:100%;
+   height:100%;
+   object-fit:cover;
+   object-position: center top;
 }
-
-
 .vdobox h1{
     position:absolute;
     color:#fff;
-    font-size: 4em;
-    line-height: 1.2em;
-    font-weight: 900;
+    font-size:4em;
+    line-height:1.2em;
+    font-weight:900;
     text-align: center;
     top:200px;
     left:50%;
     transform: translateX(-50%);
-    z-index: 10;
+    z-index:2;
     text-shadow: 2px 2px 2px rgba(0,0,0,1);
-    letter-spacing: 5px;
-    width: 100%;
-
+    letter-spacing:-5px;
+    width:100%;
 }
-
 .vdobox p{
-    width: 100%;
+    width:100%;
     position:absolute;
     color:#333;
-    font-size: 1.5em;
-    font-weight: 300;
+    font-size:1.5em;
+    font-weight:300;
     text-align: center;
     top:400px;
     left:50%;
     transform: translateX(-50%);
-    z-index: 10;
+    z-index:2;
 }
-
 .circle-box{
-    width: 220px;
-    height: 220px;
-    border-radius: 50%;
+    width:220px;
+    height:220px;
+    border-radius:50%;
     bottom:-110px;
-    left: calc(50% - 110px);
-    background-color: rgba(0,0,0,0.7);
+    left:calc( 50% - 110px);
+    background-color:rgba(0, 0, 0, 0.7);
     position:absolute;
-    z-index: 11;
+    z-index:10;
 }
-
 .btnbox{
-    width: 15px;
+    width:15px;
     height:20px;
-    border: 2px solid #fff;
-    position: absolute;
+    border:2px solid #fff;
+    position:absolute;
     top:30px;
-    left:calc(50% - 7.5px);
-    z-index: 11;
-    border-radius: 5px;
+    left: calc(50% - 7.5px);
+    z-index:11;
+    border-radius:5px;
+}
+.line{
+    position:absolute;
+    top:2px;
+    left: 50%;
+    width:2px;
+    height:5px;
+    background:#fff;
+    animation-name: line-action;
+    animation-duration:1s;
+    animation-iteration-count: infinite;
 }
 .circle-box p{
     position:absolute;
-    top: 15px;
+    top:15px;
     color:#fff;
-    z-index: 22;
-    font-size: 1em;
-    width: 220px;
+    z-index:22;
+    font-size:1em;
     font-weight:500;
-}
-.line{
-     position:absolute;
-     top:2px;
-     left: 50%;
-     width: 2px;
-     height: 5px;
-     background: #fff;
-     animation-name : line-action;
-     animation-duration: 1s;
-     animation-iteration-count: infinite;
+    width:220px;
 }
 @keyframes line-action {
-    from { 
+    from{
         top:0;
     }
-    to{   
+    to{
         top: 8px;
     }
 }
-
-@media screen and (max-width:1600px){
-
+@media screen and (max-width:1600px) {
     .vdobox{
-       height: auto;
+        height:auto;
     }
-
     .vdobox h1{
-        
         font-size:3em;
     }
-
     .vdobox p{
-         font-size: 1em;
+        font-size: 1em;
     }
-    
-    
 }
-
-@media screen and (max-width:768px){
+@media screen and (max-width:768px) {
     header{
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding-top:10px;
+        padding-bottom:10px;
     }
-
     header .logo{
         font-size:1.3em;
-        font-weight: 500;
+        font-weight:500;
     }
     .vcontainer{
-        position: relative;
+        position:relative;
     }
     .vcontainer::after{
-        display: block;
-        content: "";
-        padding-bottom: 45%;
+        display:block;
+        content:"";
+        padding-bottom:45%;
     }
-
     .vdobox{
-        width: 100%;
-        height: 50%;
-        position:absolute;
-        top: 0;
-        left: 0;
+       position:absolute;
+       top:0;
+       left: 0;
+       width:100%;
+       height:45%;
     }
     .vdobox h1{
         top:100px;
         font-size:2em;
-        font-weight: 500;
-        letter-spacing: -2px;
+        font-weight:500;
+        letter-spacing:-2px;
     }
-
     .vdobox p{
-         top: 200px;
-         width: 80%;
-         font-size: 1em;
-         color:#333;
+        top:200px;
+        font-size: 1em;
+        color:#fff;
+        width:80%;
     }
     .vdo{
-        width: 100%;
-        height: 100%;
+        height:100%;
+        width:100%;
         object-fit: cover;
     }
-    nav, .searchform {
-         display: none;
+    nav, .searchform{
+        display:none;
     }
-
     .right{
-        width: 15%;
-    }
+        width:15%;
+    } 
     .btnbox p{
-        width: 150px;
+        width:150px;
         top:15px;
     }
     .btn-h-line span{
-           font-size:0.6em;
-           padding-left: 8px;
-           padding-right: 8px;
+        font-size:0.6em;
+        padding-left:8px;
+        padding-right:8px;
     }
 }
-
-
