--- a/css/style.css
+++ b/css/style.css
@@ -23,22 +23,18 @@ a:hover{
     margin-left:auto;
     margin-right:auto;
 }
-
 .justify-between{
     justify-content: space-between;
 }
-
 .align-center{
-    text-align: center;
+    align-items: center;
 }
-
 .text-center{
     text-align: center;
 }
 section{
-    padding-top: 100px;
+    padding-top:100px;
 }
-
 .d-flex{
     display:flex;
 }
@@ -61,7 +57,7 @@ header{
     z-index:1;
     border-bottom:1px solid #ccc;
     display:none;
-    box-shadow: 0 0 15px 0 rgba(0,0,0,0.2);
+    box-shadow:0 0 15px 0 rgba(0,0,0,0.2);
 }
 .black-font{
     color:#333 !important;
@@ -315,6 +311,7 @@ video.vdo{
     z-index:2;
 }
 .circle-box{
+    content: "";
     width:220px;
     height:220px;
     border-radius:50%;
@@ -324,6 +321,17 @@ video.vdo{
     position:absolute;
     z-index:10;
 }
+/* .circle-box::after{
+    content:"";
+    display: block;
+    width: 100%;
+    background:#fff;
+    height:10px;
+    top:103px;
+    left:0;
+    position:absolute;
+    z-index:1100;
+} */
 .btnbox{
     width:15px;
     height:20px;
@@ -415,18 +423,17 @@ ul.d-submenu>li:last-child{
 .d-sub-title a.act{
     color:#fff;
 }
-
 .d-sub-title span.act{
     border-radius:50%;
-    background: #163988;
-    display: block;
-    width: 25px;
-    height: 25px;
+    background:#061536;
+    display:block;
+    width:25px;
+    height:25px;
     color:#fff;
-    text-align: center;
+    text-align:center;
 }
 .d-sub-title-before{
-    background:#007aff;
+    background:#16398B;
     width:130%;
     height:100%;
     position:absolute;
@@ -533,59 +540,57 @@ ul.d-submenu>li:last-child{
     }
 }
 
-
-
-/**********    section new       *****************/
-
+/**************** SECTION NEW ***************/
 .new-title{
     font-size:3.7em;
-    color: #000;
-    letter-spacing: -5px;
+    color:#000;
+    letter-spacing:-2px;
 }
-
 .new-title em{
     font-style: normal;
-    color: #2f5bc1;
+    color:#2f5bc1;
 }
-
 .img{
-    margin-right: 30px;
-    position: relative;
+    margin-right:30px;
+    position:relative;
 }
-
+.img img{
+    object-fit: cover;
+    width:110px;
+    height:110px;
+}
 .img::before{
-    content: "";
+    content:"";
     position:absolute;
-    top: -10px;
-    left: -10px;
-    width: 110px;
-    height: 110px;
-    border-radius: 50%;
-    box-sizing: content-box;
+    top:-10px;
+    left:-10px;
+    width:110px;
+    height:110px;
+    border-radius:50%;
+    box-sizing:content-box;
     border:10px solid transparent;
-    outline:2px dotted #ddd;
+    outline:2px dashed #ddd;
     animation: rolling 20s infinite linear;
 }
 
-@keyframes rolling{
+@keyframes rolling {
     from{
-        transform: rotate(0);
+       transform: rotate(0);
     }
     to{
-        transform: rotate(360deg);
+       transform: rotate(360deg)
     }
-}
-
-.desc-text h2{
-    font-size:1.7em;
-    margin: 0;
 }
 .desc-text{
     width: 330px;
 }
+.desc-text h2{
+    font-size:1.7em;
+    margin:0;
+}
 .desc-text p{
-    margin: 0;
-    margin-top: 5px;
-    font-size: 1.1em;
-    font-weight: 500;
+    margin:0;
+    margin-top:5px;
+    font-size:1.1em;
+    font-weight:500;
 }
